# ytmpd

./: .gitignore  .pre-commit-config.yaml  .stignore  CHANGELOG.md  LICENSE  README.md  VERSION_MANAGEMENT.md  install.sh  pyproject.toml  uninstall.sh  ytmpd.service
docs/: ICY_PROXY.md  MIGRATION.md  SECURITY_FIXES.md  i3blocks-integration.md
docs/agent/: PHASE_SUMMARY_TEMPLATE.md
examples/: config.yaml  i3-config  i3blocks-config  i3blocks.conf
extras/airplay-bridge/: config.env.template  install.sh  mpd-owntone-metadata.service.template  mpd_owntone_metadata.py  speaker  speaker-rofi  vol-wrap
scripts/: bump_version.sh  check_version_sync.sh
tests/: __init__.py  test_auto_auth_daemon.py  test_config.py  test_cookie_extract.py  test_daemon.py  test_history_config.py  test_history_integration.py  test_history_reporter.py  test_icy_proxy.py  test_like_indicator.py  test_mpd_client.py  test_notify.py  test_rating.py  test_security_fixes.py  test_stream_resolver.py  test_sync_engine.py  test_track_store.py  test_ytmpctl.py  test_ytmpd_status.py  test_ytmpd_status_cli.py  test_ytmpd_status_idle.py  test_ytmusic.py  test_ytmusic_history.py  test_ytmusic_rating.py
tests/integration/: __init__.py  test_auto_auth.py  test_full_workflow.py  test_rating_workflow.py  test_ytmpd_status_integration.py
ytmpd/: __init__.py  __main__.py  config.py  cookie_extract.py  daemon.py  exceptions.py  history_reporter.py  icy_proxy.py  mpd_client.py  notify.py  rating.py  stream_resolver.py  sync_engine.py  track_store.py  xspf_generator.py  ytmusic.py
(+86 files in other folders)
